--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "clean": "rm -rf .next node_modules/.cache"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.10.0",
     "@headlessui/react": "^2.0.0",
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -39,11 +41,13 @@
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.2",
     "next": "^14.2.30",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "nodemailer": "^6.10.1",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.51.0",
+    "react-hook-form": "^7.60.0",
     "react-icons": "^4.7.1",
     "react-intersection-observer": "^9.10.1",
     "styled-jsx": "^5.1.7",
@@ -63,6 +67,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^3.0.0",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20",
     "@types/react": "^19",
